--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,57 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!--Jacoco Config-->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<configuration>
+					<excludes>
+						<exclude>com/selimhorri/app/dto/**/*</exclude>
+						<exclude>com/selimhorri/app/exception/**/*</exclude>
+						<exclude>com/selimhorri/app/constant/**/*</exclude>
+						<exclude>com/selimhorri/app/helper/**/*</exclude>
+						<exclude>com/selimhorri/app/config/**/*</exclude>
+						<exclude>com/selimhorri/app/domain/**/*</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.7</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<finalName>${project.artifactId}-v${project.version}</finalName>
 	</build>
