feat: integrate Togglz for feature management and apply discount logic in ProductServiceImpl

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,11 +35,12 @@ management:
   endpoint:
     health:
       show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: 'togglz'
 
-
-
-
-
-
-
-
+togglz:
+  features:
+    DISCOUNT_APPLIED:
+      enabled: false
